feat: rework download page for fileorganizer

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -90,6 +90,59 @@
 		"all_platforms": "All Platforms",
 		"search_placeholder": "Search apps"
 	},
+	"fileorganizer_page": {
+		"hero_title": "Clean up messy folders<br/>with <span class=\"text-blue-600\">zero effort.</span>",
+		"hero_subtitle": "File Organizer is the simple and fast way to bring order to your digital chaos. Sort files, handle unknown items, and customize rules to fit your workflow.",
+		"released": "Released:",
+		"download_windows": "Download for Windows",
+		"download_mac": "Download for Mac",
+		"eula_text": "To use the app, you must accept the following",
+		"eula_link": "EULA",
+		"feature_simple_title": "Simple & Fast",
+		"feature_simple_desc": "Designed for speed. Just point File Organizer to a messy folder and watch it tidy up everything in seconds. No complex setup required—it just works out of the box.",
+		"feature_control_title": "Total Control",
+		"feature_control_desc": "You decide what happens. Choose how to handle subfolders, and define exactly what to do with unknown files."
+	},
+	"eula_page": {
+		"title": "END USER LICENSE AGREEMENT (EULA)",
+		"for_app": "for FileOrganizer",
+		"last_updated": "Last Updated: 18/12/2025",
+		"intro": "This End-User License Agreement (\"EULA\") is a legal agreement between you (either an individual or a single entity) and Henrik Tóth, founder of VISALP (\"Author\") for the software product FileOrganizer (the \"Software\").\n\nBy installing, copying, or otherwise using the Software, you agree to be bound by the terms of this EULA. If you do not agree to the terms of this EULA, do not install or use the Software.",
+		"sections": [
+			{
+				"title": "1. GRANT OF LICENSE",
+				"content": "The Author grants you a revocable, non-exclusive, non-transferable, limited license to download, install, and use the Software strictly for your personal, non-commercial purposes strictly in accordance with the terms of this EULA."
+			},
+			{
+				"title": "2. RESTRICTIONS ON USE",
+				"content": "You agree not to, and you will not permit others to: a) License, sell, rent, lease, assign, distribute, transmit, host, outsource, disclose, or otherwise commercially exploit the Software or make the Software available to any third party. b) Modify, make derivative works of, disassemble, decrypt, reverse compile, or reverse engineer any part of the Software."
+			},
+			{
+				"title": "3. INTELLECTUAL PROPERTY",
+				"content": "The Software, including without limitation all copyrights, patents, trademarks, trade secrets, and other intellectual property rights are, and shall remain, the sole and exclusive property of the Author."
+			},
+			{
+				"title": "4. TERMINATION",
+				"content": "This Agreement is effective until terminated. Your rights under this Agreement will terminate automatically without notice from the Author if you fail to comply with any term(s) of this Agreement. Upon termination of the Agreement, you shall cease all use of the Software and destroy all copies, full or partial, of the Software."
+			},
+			{
+				"title": "5. DISCLAIMER OF WARRANTIES",
+				"content": "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NONINFRINGEMENT. TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE."
+			},
+			{
+				"title": "6. LIMITATION OF LIABILITY",
+				"content": "IN NO EVENT SHALL VISALP (OR THE FOUNDER HENRIK TÓTH) BE LIABLE FOR ANY SPECIAL, INCIDENTAL, INDIRECT, OR CONSEQUENTIAL DAMAGES WHATSOEVER (INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF BUSINESS PROFITS, BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION, OR ANY OTHER PECUNIARY LOSS) ARISING OUT OF THE USE OF OR INABILITY TO USE THIS PRODUCT.\n\nSPECIFICALLY REGARDING DATA LOSS: YOU ACKNOWLEDGE THAT THIS SOFTWARE IS DESIGNED TO MODIFY, MOVE, AND ORGANIZE FILES ON YOUR SYSTEM. BY USING THIS SOFTWARE, YOU AGREE THAT THE AUTHOR SHALL NOT BE LIABLE FOR ANY LOSS OF DATA, CORRUPTION OF FILES, OR ACCIDENTAL DELETION THAT MAY OCCUR DURING THE OPERATION OF THE SOFTWARE. IT IS YOUR RESPONSIBILITY TO MAINTAIN BACKUPS OF YOUR DATA BEFORE USING THIS SOFTWARE."
+			},
+			{
+				"title": "7. GOVERNING LAW",
+				"content": "This Agreement shall be governed by and construed in accordance with the laws of Hungary."
+			},
+			{
+				"title": "8. LANGUAGE",
+				"content": "This Agreement has been prepared in English and Hungarian. In the event of any inconsistency or discrepancy between the two versions, the English version shall prevail and be binding."
+			}
+		]
+	},
 	"blog_page": {
 		"title": "We don't have any blogposts yet.",
 		"subtitle": "Come back later. We're working on it!"
